Update README.md and AGENTS.md with recent features and achievements - Documented strict HTTP method validation, IIFE wrapping, and client.variables.global alias in README.md. - Added documentation update to Agent Achievements in AGENTS.md. - Clarified JVM prerequisites for native access.
Co-authored-by: Junie <junie@jetbrains.com>